After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711156 - androidmedia: fix access to invalid buffers in the decoding loop
androidmedia: fix access to invalid buffers in the decoding loop
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-30 15:23 UTC by Andoni Morales
Modified: 2013-10-30 17:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
androidmedia: fix access to invalid buffers in the decoding loop (2.29 KB, patch)
2013-10-30 15:23 UTC, Andoni Morales
committed Details | Review

Description Andoni Morales 2013-10-30 15:23:51 UTC
Flushing the decoder invalidates all buffers, so it should be done
after quiting the decoding loop. Otherwise we can jump into
"failed_release" and stop everything
Comment 1 Andoni Morales 2013-10-30 15:23:56 UTC
Created attachment 258591 [details] [review]
androidmedia: fix access to invalid buffers in the decoding loop
Comment 2 Sebastian Dröge (slomo) 2013-10-30 15:36:09 UTC
Comment on attachment 258591 [details] [review]
androidmedia: fix access to invalid buffers in the decoding loop

Please go ahead, also backport to 1.2 branch :)